// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Heading Component should render correctly and match snapshot 1`] = `
.c0 {
  -webkit-letter-spacing: 1px;
  -moz-letter-spacing: 1px;
  -ms-letter-spacing: 1px;
  letter-spacing: 1px;
  font-weight: normal;
  font-size: 20px;
}

<Para
  className="c0"
  inheritedStyles=""
  type="h3"
>
  Sample
</Para>
`;

exports[`Heading Component should render with styles correctly and match snapshot 1`] = `
.c0 {
  -webkit-letter-spacing: 1px;
  -moz-letter-spacing: 1px;
  -ms-letter-spacing: 1px;
  letter-spacing: 1px;
  font-weight: normal;
  font-size: 20px;
}

<p
  className="c0"
>
  Sample
</p>
`;
